# tauri-blink1-toy

./: .gitignore  Makefile  PLAN.md  README.md
src/: blink1-bridge.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blink1.rs  lib.rs  main.rs
