[package]
name = "blink1-toy"
version = "0.1.0"
description = "blink(1) Toy for Tauri"
authors = ["Tod Kurt <tod@todbot.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "blink1_toy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri     = { version = "2", features = ["devtools"] }
hidapi    = "2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
